---------------------------------------------------------------------------------------------------
Version: 0.4.0
Date: 01.10.2022
  Features:
    - Added option to remove temporary stops when keeping the train schedule.
    - Added Home station. Each player can set their Home station in the player mod settings, when pressing 'H' the motorcar will automatically travel to your Home station.
  Fixes:
    - Scale graphic for automatically generated motorcar locomotives that don't use layers.
---------------------------------------------------------------------------------------------------
Version: 0.3.9
Date: 29.09.2022
  Fixes:
    - Show hint instead of crash if the motor car cannot be spawned
  Compatibility:
    - Do not remove the motor car if the Nav / Remote View from Space Exploration is in use
---------------------------------------------------------------------------------------------------
Version: 0.3.8
Date: 16.08.2022
  Changed:
    - Reworked handling of the driver-state to prevent crashes from other mods (e.g. Space Exploration)
  Compatibility:
    - Updated Jetpack-Check (0.1.5) to only "flying", not "hovering in space"
---------------------------------------------------------------------------------------------------
Version: 0.3.7
Date: 25.07.2022
  Fixes:
    - Fixed a crash when the surface is switched and the stored schedule contains a temporary stop
---------------------------------------------------------------------------------------------------
Version: 0.3.6
Date: 15.07.2022
  Fixes:
    - Fixed a crash when a rail below a temporary stop is removed, and the schedule is kept
---------------------------------------------------------------------------------------------------
Version: 0.3.5
Date: 11.07.2022
  Changes:
    - Enable keeping the motorcars' schedule as a mod setting per user
---------------------------------------------------------------------------------------------------
Version: 0.3.4
Date: 20.06.2022
  Changes: