@@ -4,6 +4,7 @@ Date: 01.10.2022
   Features:
     - Added option to remove temporary stops when keeping the train schedule.
     - Added Home station. Each player can set their Home station in the player mod settings, when pressing 'H' the motorcar will automatically travel to your Home station.
+    - Pressing 'SHIFT + H' will send the player to where they last traveled Home from.
   Fixes:
     - Scale graphic for automatically generated motorcar locomotives that don't use layers.
 ---------------------------------------------------------------------------------------------------
